try new code style

--- a/style.css
+++ b/style.css
@@ -4,7 +4,32 @@
     font-family: sans-serif;
 }
 
+body {
+    background: #082940;
+    color: white;
+}
+
 .main-box {
     width: 100%;
     height: 100vh;
 }
+
+/* 
+.main-box {
+    -webkit-transition: all 10s ease-in;
+    transition: all 10s ease-in;
+    display: inline-block;
+}
+
+.fallen {
+    -webkit-transform: translate(0, 1000px);
+    transform: translate(0, 1000px);
+}
+
+p {
+    margin: 3em 5em;
+    font-family: Georgia, serif;
+    font-size: large;
+    color: #cde;
+
+} */
